// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Readme file generation tests should generate README.md with core properties 1`] = `
"## Application Details
|               |
| ------------- |
|**Generation Date and Time**<br>|
|**App Generator**<br>@sap/generator-fiori-elements|
|**App Generator Version**<br>2.0.1|
|**Generation Platform**<br>|
|**Template Used**<br>List Report Page V4|
|**Service Type**<br>|
|**Service URL**<br>N/A|
|**Module Name**<br>appName|
|**Application Title**<br>appTitle|
|**Namespace**<br>appNamespace|
|**UI5 Theme**<br>a_ui5_theme|
|**UI5 Version**<br>1.2.3|
|**Enable TypeScript**<br>False|
|**Add Eslint configuration**<br>False|
|**Main Entity**<br>Product|

## appName

Fiori project description

### Starting the generated app

-   This app has been generated using the SAP Fiori tools - App Generator, as part of the SAP Fiori tools suite.  

#### Pre-requisites:

1. Active NodeJS LTS (Long Term Support) version and associated supported NPM version.  (See https://nodejs.org)


"
`;

exports[`Readme file generation tests should generate README.md with the correct content including core and optional properties 1`] = `
"## Application Details
|               |
| ------------- |
|**Generation Date and Time**<br>Jan 01 1975|
|**App Generator**<br>@sap/generator-fiori-elements|
|**App Generator Version**<br>2.0.1|
|**Generation Platform**<br>CLI|
|**Template Used**<br>List Report Page V4|
|**Service Type**<br>Local Cap|
|**Service URL**<br>http://mock.url/with/path/to/odata|
|**Module Name**<br>appName|
|**Application Title**<br>appTitle|
|**Namespace**<br>appNamespace|
|**UI5 Theme**<br>a_ui5_theme|
|**UI5 Version**<br>1.2.3|
|**Enable TypeScript**<br>False|
|**Add Eslint configuration**<br>False|

## appName

Fiori project description

### Starting the generated app

-   This app has been generated using the SAP Fiori tools - App Generator, as part of the SAP Fiori tools suite.  In order to launch the generated app, simply start your CAP project (\`\`\`mvn spring-boot:run\`\`\`) and navigate to the following location in your browser:

http://localhost:8080/someProjectName/webapp/index.html

#### Pre-requisites:

1. Active NodeJS LTS (Long Term Support) version and associated supported NPM version.  (See https://nodejs.org)


"
`;

exports[`Readme file generation tests should generate README.md with the correct content including core and optional properties 2`] = `
Object {
  "externalParameters": Object {
    "abapCSN": Array [
      Object {
        "csnName": "MOCKCSN55.abap.csn",
        "packageUri": "abapfs:/BAS_DEST/MOCK_CSN_TEST1",
        "serviceNameCsn": "MockService2",
        "serviceUri": "/with/path/to/odata/",
      },
    ],
    "addEntry1": "Generator Specific Value A",
    "addEntry2": "Generator Specific Value B",
    "addEntryArr": Array [
      Object {
        "prop1": "value1",
        "prop2": "value2",
        "prop3": "value3",
        "prop4": "value4",
      },
      Object {
        "prop1": "valuea",
        "prop2": "valueb",
        "prop3": "valuec",
        "prop4": "valued",
      },
    ],
  },
  "generationParameters": Object {
    "appDescription": "Fiori project description",
    "appName": "appName",
    "appNamespace": "appNamespace",
    "appTitle": "appTitle",
    "enableCodeAssist": false,
    "enableEslint": false,
    "enableTypeScript": false,
    "generationDate": "Jan 01 1975",
    "generatorName": "@sap/generator-fiori-elements",
    "generatorPlatform": "CLI",
    "generatorVersion": "2.0.1",
    "launchText": "In order to launch the generated app, simply start your CAP project (\`\`\`mvn spring-boot:run\`\`\`) and navigate to the following location in your browser:

http://localhost:8080/someProjectName/webapp/index.html",
    "serviceType": "Local Cap",
    "serviceUrl": "http://mock.url/with/path/to/odata",
    "template": "List Report Page V4",
    "ui5Theme": "a_ui5_theme",
    "ui5Version": "1.2.3",
  },
}
`;
